objects/copado__Promotion__c.object
<CustomObject>
    <description>This object tracks the changes that are promoted to the next Salesforce instance.</description>
    <fields>
        <fullName>Business_Disruption_logged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Disruption logged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_Freeze_Time__c</fullName>
        <label>Deployment Freeze Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Freeze_User_Stories__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>At the time of Deployment Freeze Time, this checkbox will be enabled automatically</inlineHelpText>
        <label>Freeze User Stories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Target_a_Production__c</fullName>
        <formula>IF
(NOT(ISNULL(copado__Destination_Environment__c)),
copado__Destination_Environment__r.Is_Production__c,
false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Target a Production?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmcSf__Apex_Test_Level__c</fullName>
        <description>Test levels in order from least to most restrictive</description>
        <label>Apex Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>cmcSf__Apex_Test_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cmcSf__Debug_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabling this, you can see the source files deployed (as part of this promotion) to the destination org on your git repository branch named copadoDebug/&lt;PromotionNumber&gt;</description>
        <inlineHelpText>Enabling this, you can see the source files deployed (as part of this promotion) to the destination org on your git repository branch named copadoDebug/&lt;PromotionNumber&gt;</inlineHelpText>
        <label>Debug Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmcSf__Recreate_Promotion_Branch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When performing the merge, if a promotion branch exists, it will be re-created from the target branch. Otherwise the existing promotion branch would be used (Default).</description>
        <label>Recreate Promotion Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmcSf__Validate_Deploy_Request_Id__c</fullName>
        <inlineHelpText>After a validation, if Quick Deploy is available on the target org, this field contains the validation id. If the promotion is deployed, the quick deploy will be used automatically.</inlineHelpText>
        <label>Validate Deploy Request Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cml_Caused_Business_Disruption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this Promotion caused a Business Disruption</description>
        <label>Caused Business Disruption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cml_Is_Destination_a_Production_Org__c</fullName>
        <description>Indicates if this Promotion is targeting a Production Org</description>
        <formula>IF
(NOT(ISNULL(copado__Destination_Environment__c)),
copado__Destination_Environment__r.cml_Is_Production_Org__c,
false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Destination a Production Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Back_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the promotion is from a higher environment to a lower environment in the deployment flow.</description>
        <label>Is Back-Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is checked by Copado once the promotion is merged and deployed successfully for multi-cloud platform.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Connection_Behavior__c</fullName>
        <label>Connection Behavior</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Create_Full_Permission_Sets_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you wish to move added permission sets to a Full Permission Sets deployment step.  This will remove them from the Metadata deployment step.</inlineHelpText>
        <label>Create Full Permission Sets Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Create_Full_Profiles_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you wish to move added profiles to a Full Profiles deployment step.  This will remove them from the Metadata deployment step.</inlineHelpText>
        <label>Create Full Profiles Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Promotions (Destination Environment)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The credential to the Destination Environment that should be used when creating a deployment. This may be auto-populated, if left blank, based on the project&apos;s deployment flow if you are the owner of a Credential to the Destination Environment.</inlineHelpText>
        <label>Destination Credential</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Org__c.copado__Environment__c</field>
                <operation>equals</operation>
                <valueField>$Source.copado__Destination_Environment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Promotions (Destination Credential)</relationshipLabel>
        <relationshipName>Promotions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_From_Auto_Resolve__c</fullName>
        <description>Conflicts found in the selected metadata types are not auto-resolved by Copado when merging feature branches into the promotion branch. The conflicts can be manually resolved using Copado.</description>
        <inlineHelpText>Conflicts found in the selected metadata types are not auto-resolved by Copado when merging feature branches into the promotion branch. The conflicts can be manually resolved using Copado.</inlineHelpText>
        <label>Exclude From Auto Resolve</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Auto_Resolve_Exceptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Is_Rolled_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rolled Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Last_Deployment_Execution_Id__c</fullName>
        <label>Last Deployment Execution Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Last_Promotion_Execution_Id__c</fullName>
        <label>Last Promotion Execution Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Merge_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this promotion includes a manual conflict resolution.</inlineHelpText>
        <label>Merge Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Order_by__c</fullName>
        <inlineHelpText>Fill this field only if you want to change the selected user stories order on deployment. (usage exp: name asc, copado__backlog_rank__c desc)</inlineHelpText>
        <label>Order User Stories by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Platform__c</fullName>
        <formula>IF( NOT(ISBLANK( copado__Project__c )) ,  TEXT(copado__Project__r.copado__Deployment_Flow__r.copado__Platform__c) ,  IF( NOT(ISBLANK( copado__Release__c )),  TEXT(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Platform__c) , &apos;Salesforce&apos;) )</formula>
        <inlineHelpText>This field auto-populates and displays the pipeline platform.</inlineHelpText>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The selected Project should be linked to an active Deployment Flow</inlineHelpText>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will provide the ability to deploy User Stories within a Release.</description>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Send_Deployment_Complete_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify When Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Source_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Source_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The credential to the Source Environment that should be used when creating a deployment. This may be auto-populated, if left blank, based on the project&apos;s deployment flow if you are the owner of a Credential to the Source Environment.</inlineHelpText>
        <label>Source Credential</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Org__c.copado__Environment__c</field>
                <operation>equals</operation>
                <valueField>$Source.copado__Source_Environment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Promotions (Source Credential)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed with errors</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Validation failed</fullName>
                </value>
                <value>
                    <fullName>Merge Conflict</fullName>
                </value>
                <value>
                    <fullName>Conflicts Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Destination_Environment__c</columns>
        <columns>copado__Source_Environment__c</columns>
        <columns>copado__Back_Promotion__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>cml_Is_Destination_a_Production_Org__c</columns>
        <columns>Is_Target_a_Production__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P{00000}</displayFormat>
        <label>Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Avoid_Deleting_Selected_User_Stories</fullName>
        <active>true</active>
        <errorConditionFormula>Freeze_User_Stories__c  = true</errorConditionFormula>
        <errorMessage>You can&apos;t delete User Stories after Deployment Freeze Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Scratch_Orgs_Disabled_for_Back_Promoting</fullName>
        <active>true</active>
        <errorConditionFormula>AND(copado__Back_Promotion__c == true,ISPICKVAL(copado__Destination_Org_Credential__r.copado__Org_Type__c,&apos;Scratch Org&apos;))</errorConditionFormula>
        <errorMessage>Back Promotions to Scratch Orgs are not allowed</errorMessage>
    </validationRules>
</CustomObject>